# redis-vl-python

./: .autorc  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  [DRAFT - internal] SQL-Redis _ MLP proposal.md  conftest.py  index_migrator_audit_2026-06-03.md  index_migrator_followup_audit_2026-06-03.md  main.py  mcp-auth-spec.md  mkdocs.yml  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements.txt  scripts.py  setup.cfg  setup.py  test_index_delete.py
.cursor/rules/: redisvl.mdc
.docs_static/: index.html
.github/workflows/: auto-release.yml  claude.yml  docs.yml  lint.yml  publish.yml  release-drafter.yml  release-new.yml  release-undo.yml  release.yml  run_tests.yml  test-fork-pr.yml  test-publish.yml  test.yml
data/: schema.py
docs/: CNAME  Makefile  changelog.rst  conf.py  genindex.html  index.html  index.md  index.rst  objects.inv  overview.rst  requirements-doc.txt  search.html  searchindex.js  validation.md
docs/0.1.0/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/0.1.1/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/0.1.2/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/0.1.3/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/0.2.0/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/0.3.0/: index.html  objects.inv  search.html  searchindex.js
docs/0.3.5/: search.html
docs/_extension/: gallery_directive.py
docs/_modules/: index.html
docs/_static/: documentation_options.js  gallery.yaml  version_names.json
docs/_templates/: custom_sidebar.html  layout.html  sidebar-nav-custom.html  versions.html
docs/api/: cache.html  cache.md  cache.rst  cli.rst  filter.html  filter.md  filter.rst  index.html  index.md  indexschema.rst  message_history.md  message_history.rst  query.html  query.md  query.rst  redisvl_api.rst  reranker.html  reranker.md  reranker.rst  router.html  router.md  router.rst  schema.html  schema.md  schema.rst  searchindex.html  searchindex.md  searchindex.rst  session_manager.html  session_manager.rst  threshold_optimizer.rst  vector.md  vector.rst  vectorizer.html  vectorizer.md  vectorizer.rst
docs/concepts/: HybridFiltering.md  VectorDatabase.md  VectorIndex.md  architecture.md  distance.md  extensions.md  field-attributes.md  index-migrations.md  index.md  llm.md  mcp.md  queries.md  search-and-indexing.md  utilities.md  vectors.md
docs/dev/: pr-review-triage.md
docs/examples/: hotel_reviews_qna.ipynb  hotel_schema.yml  index.html  index.md  openai_qna.html  openai_qna.ipynb
docs/for-ais-only/: BUILD_AND_TEST.md  FAILURE_MODES.md  REPOSITORY_MAP.md  index.md
docs/overview/: cli.html  cli.ipynb  index.html  index.md  installation.html  installation.md
docs/proposals/: sqlquery-ft-hybrid.md
docs/stylesheets/: redis-brand.css
docs/user_guide/: 01_getting_started.ipynb  02_complex_filtering.ipynb  02_hybrid_queries.ipynb  03_llmcache.ipynb  04_vectorizers.ipynb  05_hash_vs_json.ipynb  06_rerankers.ipynb  07_message_history.ipynb  07_session_manager.ipynb  08_semantic_router.ipynb  09_advanced_queries.ipynb  09_svs_vamana.ipynb  09_threshold_optimization.ipynb  10_embeddings_cache.ipynb  11_advanced_queries.ipynb  12_sql_to_redis_queries.ipynb  13_langcache_semantic_cache.ipynb  13_llm_router.ipynb  13_sql_query_exercises.ipynb  14_index_migration.ipynb  15_mcp.ipynb  IMPROVEMENT_PLAN.md  cli.ipynb  data_validation.ipynb  embedding_creation.rst  getting_started_01.html  getting_started_01.ipynb  hash_vs_json_05.html  hash_vs_json_05.ipynb  hybrid_example_data.pkl  hybrid_queries_02.html  hybrid_queries_02.ipynb  index.html  index.md  installation.md  jupyterutils.py  llm_cache.rst  llmcache_03.html  llmcache_03.ipynb  llmcache_agentic.ipynb  (+18 more)
doctests/: query_vector.py
doctests/data/: query_vector_idx.yaml
examples/: 01-getting-started.ipynb  getting-started.ipynb  multi_prefix_example.py
examples/cli/: schema.yaml
local_docs/index_migrator/: 00_index.md  02_architecture.md  04_implementation_summary.md  05_migration_benchmark_report.md  11_v1_drop_recreate_tasks.md  12_v1_drop_recreate_tests.md  21_v2_iterative_shadow_tasks.md  22_v2_iterative_shadow_tests.md  30_quantize_performance_spec.md  99_tickets.md  pr_comments.md
nitin_docs/index_migrator/: 00_index.md  01_context.md  02_architecture.md  03_benchmarking.md  05_migration_benchmark_report.md  10_v1_drop_recreate_spec.md  11_v1_drop_recreate_tasks.md  12_v1_drop_recreate_tests.md  20_v2_iterative_shadow_spec.md  21_v2_iterative_shadow_tasks.md  90_prd.md  99_tickets.md
redisvl/: __init__.py  exceptions.py  index.py  load.py  query.py  schema.py  storage.py  types.py  version.py
redisvl/cli/: __init__.py  index.py  load.py  log.py  main.py  mcp.py  migrate.py  runner.py  stats.py  utils.py  version.py
redisvl/extensions/: __init__.py  constants.py  router.py
redisvl/index/: __init__.py  index.py  storage.py
redisvl/llmcache/: __init__.py  base.py  semantic.py
redisvl/mcp/: __init__.py  auth.py  config.py  errors.py  filters.py  runtime.py  server.py  settings.py
redisvl/memory/: interaction.py  manager.py
redisvl/migration/: __init__.py  async_executor.py  async_planner.py  async_utils.py  async_validation.py  backup.py  batch_executor.py  batch_planner.py  executor.py  models.py  planner.py  quantize.py  reliability.py  utils.py  (+2 more)
sample-data/: sample.yml
schemas/: schema.yaml  semantic_router.yaml  test_hash_schema.yaml  test_json_schema.yaml
scripts/: breaking_changes_detector.py  generate_pretrained_config.py  mkdocs_hooks.py  test_crash_resume_e2e.py  test_migration_e2e.py  verify_data_correctness.py
spec/: MCP-production-example.md  MCP.md
tests/: cluster-compose.yml  conftest.py  docker-compose.yml  sample_hash_schema.yaml  sample_json_schema.yaml  test_filter.py  test_imports.py  test_index.py  test_pandas.py  test_schema.py  test_simple.py  test_token_escaper.py
utils/: search_index.py
(+560 files in other folders)
