[project]
name = "redisvl"
version = "0.9.0"
description = "Python client library and CLI for using Redis as a vector database"
authors = [{ name = "Redis Inc.", email = "applied.ai@redis.com" }]
requires-python = ">=3.9,<3.14"
readme = "README.md"
license = "MIT"
keywords = [
    "ai",
    "redis",
    "redis-client",
    "vector-database",
    "vector-search",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.26.0,<3",
    "pyyaml>=5.4,<7.0",
    "redis>=5.0,<7.0",
    "pydantic>=2,<3",
    "tenacity>=8.2.2",
    "ml-dtypes>=0.4.0,<1.0.0",
    "python-ulid>=3.0.0",
    "jsonpath-ng>=1.5.0",
]

[project.optional-dependencies]
mistralai = ["mistralai>=1.0.0"]
openai = ["openai>=1.1.0"]
nltk = ["nltk>=3.8.1,<4"]
cohere = ["cohere>=4.44"]
voyageai = ["voyageai>=0.2.2"]
sentence-transformers = ["sentence-transformers>=3.4.0,<4"]
vertexai = [
    "google-cloud-aiplatform>=1.26,<2.0.0",
    "protobuf>=5.28.0,<6.0.0",
]
bedrock = [
    "boto3>=1.36.0,<2",
    "urllib3<2.2.0",
]

[project.urls]
Homepage = "https://github.com/redis/redis-vl-python"
Repository = "https://github.com/redis/redis-vl-python"
Documentation = "https://docs.redisvl.com"

[project.scripts]
rvl = "redisvl.cli.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0,<26",
    "isort>=5.6.4,<6",
    "pylint>=3.1.0,<4",
    "pytest>=8.1.1,<9",
    "pytest-asyncio>=0.23.6,<0.24",
    "pytest-xdist[psutil]>=3.6.1,<4",
    "pre-commit>=4.1.0,<5",
    "mypy>=1.11.0,<2",
    "nbval>=0.11.0,<0.12",
    "types-pyyaml",
    "types-pyopenssl",
    "testcontainers>=4.3.1,<5",
    "cryptography>=44.0.1 ; python_version > '3.9.1'",
    "codespell>=2.4.1,<3",
]
docs = [
    "sphinx>=4.4.0",
    "pydata-sphinx-theme>=0.15.2,<0.16",
    "nbsphinx>=0.9.3,<0.10",
    "jinja2>=3.1.3,<4",
    "sphinx-copybutton>=0.5.2,<0.6",
    "sphinx-favicon>=1.0.1,<2",
    "sphinx-design>=0.5.0,<0.6",
    "myst-nb>=1.1.0,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[tool.black]
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
exclude = '''
(
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | setup.py
)
'''

[tool.pytest.ini_options]
log_cli = true
asyncio_mode = "auto"
filterwarnings = [
    "ignore:get_async_redis_connection will become async in the next major release:DeprecationWarning",
]

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["env", "venv", ".venv"]

