[metadata]
name = redisvl
description = Python client library and CLI for using Redis as a vector database
long_description = file: README.md
long_description_content_type=text/markdown

url = https://github.com/RedisVentures/redisvl
project_urls =
    Source = https://github.com/RedisVentures/redisvl
    Documentation = https://www.redisvl.com

author = Redis Inc.
contact = Sam Partee
contact_email = sam.partee@redis.com
license = MIT
keywords = ai, redis, redis-client, vector-database, vector-search
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
